feat: real time view added

--- a/views/vista.hbs
+++ b/views/vista.hbs
@@ -1,23 +1,40 @@
-<h1 class="title">Vista de productos</h1>
-{{#if productos}}
-<table class="table table-dark">
-  <thead>
-    <th>Nombre</th>
-    <th>Precio</th>
-    <th>Foto</th>
-  </thead>
-  <tbody>
-    {{#each productos}}
-        <tr>
-            <td>{{this.title}}</td>
-            <td>$ {{this.price}}</td>
-            <td><img src="{{this.thumbnail}}" alt="imagen"></td>
-        </tr>
-    {{/each}}
-  </tbody>
-  {{else}}
-    <div class="alert alert-warning" role="alert">
-      No se encontraron productos
+<div class="main-container">
+
+  <h1 class="title">Ingrese Producto</h1>
+
+  <form id="form" enctype="application/x-www-form-urlencoded">
+    <div>
+      <label for="title">Nombre</label>
+      <input id="titleInput" type="text" name="title" />
     </div>
-  {{/if}}
-</table>
+    <div>
+      <label for="price">Precio</label>
+      <input id="priceInput" type="text" name="price" />
+    </div>
+    <div>
+      <label for="thumbnail">Foto URL</label>
+      <input id="thumbnailInput" type="text" name="thumbnail" />
+    </div>
+    <button id="btn" type="submit" class="btn btn-success">Enviar</button>    
+  </form>
+
+  <hr>
+
+  <table class="table table-dark">
+    <thead>
+      <th>Nombre</th>
+      <th>Precio</th>
+      <th>Foto</th>
+    </thead>
+    <tbody id="tableBody">
+      {{#each productos}}
+          <tr>
+              <td>{{this.title}}</td>
+              <td>$ {{this.price}}</td>
+              <td><img src="{{this.thumbnail}}" alt="imagen"></td>
+          </tr>
+      {{/each}}
+    </tbody>
+  </table>
+
+</div>
