--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: rgb(245, 245, 245);
   padding: 20px;
 }
 
@@ -15,8 +14,15 @@ label {
   font-weight: bold;
 }
 
+.main-container {
+  background-color: rgb(236, 236, 236);
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 form {
-  max-width: 500px;
+  /*max-width: 500px;*/
   margin: 0 auto;
 }
 
