--- a/views/vista.hbs
+++ b/views/vista.hbs
@@ -1,8 +1,6 @@
 <div class="main-container">
-
+  <form id="form" class="form container" enctype="application/x-www-form-urlencoded">
   <h1 class="title">Ingrese Producto</h1>
-
-  <form id="form" enctype="application/x-www-form-urlencoded">
     <div>
       <label for="title">Nombre</label>
       <input id="titleInput" type="text" name="title" />
@@ -18,8 +16,7 @@
     <button id="btn" type="submit" class="btn btn-success">Enviar</button>    
   </form>
 
-  <hr>
-
+  <div class="container">
   <table class="table table-dark">
     <thead>
       <th>Nombre</th>
@@ -36,5 +33,28 @@
       {{/each}}
     </tbody>
   </table>
+  </div>
+
+  <div class="msg-center container">
+    <h2 class="title">Centro de Mensajes</h2>
+    <form id="msg-form" enctype="application/x-www-form-urlencoded">
+      <input id="email-input" type="text" autocomplete="off" name="email-input">
+      
+      <hr>
+      <div class="messages-container" id="messages">
+        {{#each mensajes}}
+          <div class="message">
+            <span class="email">{{this.email}}</span>
+            <span class="date">{{this.date}}</span>
+            <span class="msg">{{this.msg}}</span>
+          </div>
+        {{/each}}
+      </div>
+
+      <input id="message-input" type="text" autocomplete="off" name="msg-input">      
+      <button type="submit" class="btn btn-primary">Enviar!</button>
+    </form>
+
+  </div>
 
 </div>
